spot instrument managment

--- a/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
+++ b/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
@@ -152,7 +152,10 @@
         if (IsCreate)
             Item = new AssetItem()
             {
-                Asset = new Asset(),
+                Asset = new Asset()
+                {
+                    BrokerId = "jetwallet"
+                },
                 PaymentSettings = new AssetPaymentSettingsNoSqlEntity()
                 {
                     PaymentSettings = new AssetPaymentSettings()
