--- a/Backoffice/Components/SpotInstruments/SpotInstrumentTableRow.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentTableRow.razor
@@ -1,30 +1,24 @@
-﻿@using Service.AssetsDictionary.Domain.Models
-@using Service.AssetsDictionary.Grpc
-@using Backoffice.Abstractions.Models
-@using Backoffice.Services.Assets
-@using Microsoft.Extensions.Logging
-@using Microsoft.Extensions.Primitives
+﻿@using Backoffice.Services.SpotInstruments
 
-@inject IAssetItemManager AssetItemManager;
+@inject ISpotInstrumentManager SpotInstrumentManager;
 @inject IToaster ToastService;
 
+<tr style="@(!Item.Instrument.IsEnabled ? "background: lightgray" : "")">
+    <td>@Item.Instrument.Symbol</td>
+    <td style="@(!Item.Instrument.IsEnabled ? "background: red" : "")">@Item.Instrument.IsEnabled</td>
+    
+    <td>@Item.Instrument.BaseAsset</td>
+    <td>@Item.Instrument.QuoteAsset</td>
+    <td>@Item.Instrument.Accuracy</td>
+    <td>@Item.Instrument.MinVolume</td>
+    <td>@Item.Instrument.MaxVolume</td>
+    <td>@Item.Instrument.MaxOppositeVolume</td>
+    <td>@Item.Instrument.MarketOrderPriceThreshold</td>
 
-<tr style="@(!Item.Asset.IsEnabled ? "background: lightgray" : "")">
-    <td>@Item.Asset.Symbol</td>
-    <td>@Item.Asset.Description</td>
-    <td style="@(!Item.Asset.IsEnabled ? "background: red" : "")">@Item.Asset.IsEnabled</td>
-    <td>@Item.Asset.Accuracy</td>
-    
     <td>
-        <MyLabel Text="KYC" Color="orange" IsShow="@Item.Asset.KycRequiredForDeposit" />
-        <MyLabel Text="BitGo" Color="lightblue" IsShow="@Item.PaymentSettings?.PaymentSettings?.BitGoCrypto?.IsEnabledDeposit" />
-        <MyLabel Text="PciDss" Color="lightblue" IsShow="@Item.PaymentSettings?.PaymentSettings?.PciDss?.IsEnabledDeposit" />
+        <MyLabel Text="KYC" Color="orange" IsShow="@Item.Instrument.KycRequiredForTrade" />
     </td>
     
-    <td>
-        <MyLabel Text="KYC" Color="orange" IsShow="@Item.Asset.KycRequiredForWithdrawal" />
-        <MyLabel Text="BitGo" Color="lightblue" IsShow="@Item.PaymentSettings?.PaymentSettings?.BitGoCrypto?.IsEnabledWithdrawal" />
-    </td>
     <td>
         @foreach (var brand in Item.Brands)
         {
@@ -36,7 +30,7 @@
         <ul class="nav">
             <li><button type="button" class="btn-outline-info btn" @onclick="ShowDetails" >Details</button></li>
             <li><button type="button" class="btn-outline-warning btn" @onclick="ShowEdit" >Edit</button></li>
-            @if (!Item.Asset.IsEnabled)
+            @if (!Item.Instrument.IsEnabled)
             {
                 <li><button type="button" class="btn-outline-danger btn" @onclick="ShowDelete">Delete</button></li>
             }
@@ -47,13 +41,13 @@
 
 @if (IsShowDetails)
 {
-    <AssetDetailsDialog Item="@Item" OnCloseCallback="OnCloseAssetDialog" />
+    <SpotInstrumentDetailsDialog Item="@Item" OnCloseCallback="OnCloseInstrumentDialog" />
 }
 
 @if (IsShowEdit)
 {
     <div>
-        <AssetDetailsDialogEdit Item="@Item" IsCreate="false" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="OnUpdateAsset" />
+        <SpotInstrumentDetailsDialogEdit Item="@Item" IsCreate="false" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="OnUpdateInstrument" />
     </div>
 }
 
@@ -61,13 +55,13 @@
 {
     <div>
         <BaseTwoButtonsDialog
-            Caption=@($"Delete asset {Item.Asset.Symbol} [{Item.Asset.BrokerId}]")
+            Caption=@($"Delete instrument {Item.Instrument.Symbol} [{Item.Instrument.BrokerId}]")
             OnClose="OnCloseDeleteDialog"
             YesButtonCaption="Delete"
             NoButtonCaption="Cancel"
             OnSubmit="DeleteItem">
             
-            <h3 class="alert-warning">Are you sure you want to delete the asset <b>@Item.Asset.Symbol [@Item.Asset.BrokerId]?</b></h3>
+            <h3 class="alert-warning">Are you sure you want to delete the asset <b>@Item.Instrument.Symbol [@Item.Instrument.BrokerId]?</b></h3>
             
         </BaseTwoButtonsDialog>
     </div>
@@ -77,7 +71,7 @@
 {
     <div>
         <BaseTwoButtonsDialog
-            Caption=@($"Change Brands {Item.Asset.Symbol} [{Item.Asset.BrokerId}]")
+            Caption=@($"Change Brands {Item.Instrument.Symbol} [{Item.Instrument.BrokerId}]")
             OnClose="OnCloseBrandDialog"
             YesButtonCaption="Change"
             NoButtonCaption="Cancel"
@@ -98,84 +92,38 @@
             
         </BaseTwoButtonsDialog>
     </div>
-    
 }
+
+
 
 
 
 @code {
     
     [Parameter]
-    public AssetItem Item { get; set; }
-
-    [Parameter]
-    public ILoaderConfiguration LoaderConfig { get; set; }
+    public SpotInstrumentItem Item { get; set; }
     
     [Parameter]
-    public EventCallback<AssetItem> OnDeleteCallback { get; set; }
+    public EventCallback<SpotInstrumentItem> OnDeleteCallback { get; set; }
     
     private bool IsShowDetails { get; set; }
-    
     private bool IsShowEdit { get; set; }
-    
     private bool IsShowDelete { get; set; }
     
     private bool IsShowBrand { get; set; }
     private string ChangeBrandId { get; set; }
     private bool IsBrandAssigned { get; set; }
 
-    private void OnCloseAssetDialog()
-    {
-        IsShowDetails = false;
-        StateHasChanged();
-    }
-
     private void ShowDetails()
     {
         IsShowDetails = true;
-        StateHasChanged();
+        StateHasChanged();        
     }
 
     private void ShowEdit()
     {
         IsShowEdit = true;
         StateHasChanged();
-    }
-
-    private void OnCloseEditDialog()
-    {
-        IsShowEdit = false;
-        StateHasChanged();
-    }
-    
-    private async void OnUpdateAsset(AssetItem asset)
-    {
-        try
-        {
-            await AssetItemManager.UpdateAsset(asset);
-
-            IsShowEdit = false;
-
-            await InvokeAsync(StateHasChanged);
-        }
-        catch (Exception ex)
-        {
-            ToastService.Error(ex.Message, "Edit asset");
-        }
-    }
-
-
-    private void OnCloseDeleteDialog()
-    {
-        IsShowDelete = false;
-        StateHasChanged();
-    }
-
-
-    private async Task DeleteItem()
-    {
-        IsShowDelete = false;
-        await OnDeleteCallback.InvokeAsync(Item);
     }
 
     private void ShowDelete()
@@ -186,10 +134,53 @@
 
     private void ShowBrand()
     {
-        IsBrandAssigned = false;
         ChangeBrandId = "";
+        IsBrandAssigned = false;
+        
         IsShowBrand = true;
         StateHasChanged();
+    }
+
+    private void OnCloseInstrumentDialog()
+    {
+        IsShowDetails = false;
+        StateHasChanged();
+    }
+
+    private void OnCloseEditDialog()
+    {
+        IsShowEdit = false;
+        StateHasChanged();
+    }
+    
+    private async void OnUpdateInstrument(SpotInstrumentItem item)
+    {
+        try
+        {
+            await SpotInstrumentManager.UpdateInstrument(item);
+
+            IsShowEdit = false;
+            
+            ToastService.Info("Spot Instrument is updated", "Edit Spot Instrument");
+
+            await InvokeAsync(StateHasChanged);
+        }
+        catch (Exception ex)
+        {
+            ToastService.Error(ex.Message, "Edit Spot Instrument");
+        }
+    }
+
+
+    private void OnCloseDeleteDialog()
+    {
+        IsShowDelete = false;
+        StateHasChanged();
+    }
+
+    private async Task DeleteItem()
+    {
+        await OnDeleteCallback.InvokeAsync(Item);
     }
 
     private void OnCloseBrandDialog()
@@ -203,20 +194,19 @@
         try
         {
             if (IsBrandAssigned && !string.IsNullOrEmpty(ChangeBrandId))
-                await AssetItemManager.AddBrand(Item, ChangeBrandId);
+                await SpotInstrumentManager.AddBrand(Item, ChangeBrandId);
             else
-                await AssetItemManager.RemoveBrand(Item, ChangeBrandId);
+                await SpotInstrumentManager.RemoveBrand(Item, ChangeBrandId);
             
-            ToastService.Info("Brand is changed", "Change asset brand");
+            ToastService.Info("Brand is changed", "Change instrument brand");
             
             IsShowBrand = false;
             StateHasChanged();
         }
         catch (Exception ex)
         {
-            ToastService.Error(ex.Message, "Change asset brand");
+            ToastService.Error(ex.Message, "Change instrument brand");
         }
-
     }
 
 }
