--- a/Backoffice/Components/SpotInstruments/SpotInstrumentTableRow.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentTableRow.razor
@@ -180,6 +180,7 @@
 
     private async Task DeleteItem()
     {
+        IsShowDelete = false;
         await OnDeleteCallback.InvokeAsync(Item);
     }
 
