--- a/Backoffice/Pages/Prices.razor
+++ b/Backoffice/Pages/Prices.razor
@@ -73,9 +73,16 @@
 
     public void Dispose()
     {
-        _timer?.Stop();
-        _timer?.Dispose();
-        _timer = null;
+        try
+        {
+            _timer?.Stop();
+            _timer?.Dispose();
+            _timer = null;
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Skip Exception\n{ex}");
+        }
     }
 
     private List<BidAsk> _prices = new ();
