--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -23,6 +23,7 @@
 @using Backoffice.Components.SpotInstruments
 @using Backoffice.Components.Liquidity
 @using Backoffice.Components.Liquidity.Market
+@using Backoffice.Components.Liquidity.Portfolio
 @using Backoffice.Components.Liquidity.Settings
 
 
