--- a/Backoffice/Components/Liquidity/Portfolio/PortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/Portfolio/PortfolioComponent.razor
@@ -5,6 +5,7 @@
 @using Service.Liquidity.Engine.Grpc.Models
 @using Service.Liquidity.Reports.Grpc
 @using Service.Liquidity.Reports.Grpc.Models
+@using Backoffice.GlobalTimers
 
 @inject IWalletPortfolioGrpc PortfolioService
 @inject ILoggerFactory LoggerFactory
@@ -78,11 +79,11 @@
         <tbody>
         @foreach (var position in _closedPositions)
         {
-            <tr>
+            <tr style="background: @(position.QuoteVolume < 0 ? "lightcoral" : "lightgreen") ">
                 <td>@position.Symbol</td>
                 <td>@position.Side</td>
                 <td>@position.BaseVolume @position.BaseAsset</td>
-                <td>@position.QuoteVolume @position.QuotesAsset</td>
+                <td><b>@position.QuoteVolume @position.QuotesAsset</b></td>
                 <td>@position.OpenTime</td>
                 <td>@position.CloseTime</td>
                 <td>@position.WalletId</td>
@@ -171,9 +172,7 @@
 
 @code {
 
-    private MyTaskTimer _timer;
-    
-    
+    private bool _isDispose = false;
     
     private PortfolioPages ActivePage { get; set; }
     
@@ -185,29 +184,35 @@
 
     private async Task Refresh()
     {
+        if (_isDispose) return;
+        
         var data = await PortfolioService.GetPortfolioAsync();
         _positions = data.List ?? new();
-
-        _closedPositions = (await LiquidityReportService.GetClosedPositions()).List ?? new();
-        _trades = (await LiquidityReportService.GetTrades()).List ?? new();
         
-        await InvokeAsync(StateHasChanged);
+        _closedPositions = (await LiquidityReportService.GetClosedPositions()).List ?? new();
+
+        if (ActivePage == PortfolioPages.Trades)
+            _trades = (await LiquidityReportService.GetTrades()).List ?? new();
+        else
+            _trades = new List<PortfolioTrade>();
+        
+#pragma warning disable 4014
+        InvokeAsync(StateHasChanged);
+#pragma warning restore 4014
     }
 
     protected override async Task OnInitializedAsync()
     {
         await Refresh();
         
-        _timer = new MyTaskTimer("PortfolioPage", TimeSpan.FromSeconds(5), 
-            LoggerFactory.CreateLogger("PortfolioPage"), Refresh);
-        _timer.Start();
+        RefreshTimer.RegisterCallback(nameof(PortfolioComponent), Refresh);
     }
 
 
     public void Dispose()
     {
-        _timer?.Stop();
-        _timer?.Dispose();
+        RefreshTimer.RemoveCallback(nameof(PortfolioComponent));
+        _isDispose = true;
     }
 
 
