--- a/Backoffice/Pages/Simulations.razor
+++ b/Backoffice/Pages/Simulations.razor
@@ -82,20 +82,19 @@
     private List<GetBalancesResponse.Balance> _balances = new List<GetBalancesResponse.Balance>();
     private List<FtxSimTrade> _trades = new List<FtxSimTrade>();
 
-    private MyTaskTimer _timer;
-    
+    private bool _isDispose;
+
     protected override async Task OnInitializedAsync()
     {
         await Refresh();
-        _timer = new MyTaskTimer("SimulationFtx", TimeSpan.FromSeconds(5),
-            LoggerFactory.CreateLogger("SimulationFtx"), DoTimer);
-        
-        _timer.Start();
+
+        GlobalTimers.RefreshTimer.RegisterCallback(nameof(Simulations), DoTimer);
     }
 
-    private Task DoTimer()
+    private async Task DoTimer()
     {
-        return Refresh();
+        if (_isDispose) return;
+        await Refresh();
     }
 
     private async Task Refresh()
@@ -111,16 +110,8 @@
 
     public void Dispose()
     {
-        try
-        {
-            _timer?.Stop();
-            _timer?.Dispose();
-            _timer = null;
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Skip Exception\n{ex}");
-        }
+        _isDispose = true;
+        GlobalTimers.RefreshTimer.RemoveCallback(nameof(Simulations));
     }
 
 }
